--- a/app/src/main/res/layout/sku_review_item.xml
+++ b/app/src/main/res/layout/sku_review_item.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="@dimen/sku_padding_10"
-    android:paddingRight="@dimen/sku_padding_10">
+    android:paddingRight="@dimen/sku_padding_10"
+    android:paddingTop="@dimen/sku_padding_5"
+    android:paddingBottom="@dimen/sku_padding_5">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
