--- a/app/src/main/res/layout/sku_spec_item.xml
+++ b/app/src/main/res/layout/sku_spec_item.xml
@@ -1,63 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/sku_padding_5">
-    <LinearLayout
-        android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:paddingTop="@dimen/sku_padding_5"
+    android:paddingBottom="@dimen/sku_padding_5"
+    android:background="@drawable/sku_divider">
+    <TextView
+        android:id="@+id/specName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_weight="1"
         android:paddingLeft="@dimen/sku_padding_10"
-        android:paddingRight="@dimen/sku_padding_10">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:orientation="vertical"
-            android:layout_gravity="bottom">
-            <TextView
-                android:id="@+id/specName"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingRight="@dimen/sku_padding_10"
-                android:paddingBottom="@dimen/sku_padding_5"
-                android:textSize="@dimen/fontsize_12sp"
-                android:textColor="@color/staples_black"
-                android:gravity="right|center_vertical"
-                android:layout_weight="0.9"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/staples_middle_gray"
-                android:layout_weight="0.1"
-                android:paddingLeft="@dimen/sku_padding_10"
-                android:paddingRight="@dimen/sku_padding_10"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:orientation="vertical"
-            android:layout_gravity="bottom">
-            <TextView
-                android:id="@+id/specValue"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/sku_padding_10"
-                android:paddingBottom="@dimen/sku_padding_5"
-                android:textSize="@dimen/fontsize_12sp"
-                android:textColor="@color/staples_black"
-                android:gravity="left|center_vertical"
-                android:layout_weight="0.9"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/staples_middle_gray"
-                android:layout_weight="0.1"
-                android:paddingLeft="@dimen/sku_padding_10"
-                android:paddingRight="@dimen/sku_padding_10"/>
-        </LinearLayout>
-    </LinearLayout>
-</TableRow>
+        android:paddingRight="@dimen/sku_padding_10"
+        android:gravity="right|center_vertical"
+        android:textSize="@dimen/fontsize_12sp"
+        android:textColor="@color/staples_black"/>
+    <TextView
+        android:id="@+id/specValue"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:paddingLeft="@dimen/sku_padding_10"
+        android:paddingRight="@dimen/sku_padding_10"
+        android:gravity="left|center_vertical"
+        android:textSize="@dimen/fontsize_12sp"
+        android:textColor="@color/staples_black"/>
+</LinearLayout>
