--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -174,6 +174,12 @@
         <item name="minorTextColor">@color/staples_dark_gray</item>
     </style>
 
+    <style name="LargeRatingStars">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/fontsize_14sp</item>
+        <item name="minorTextColor">@color/staples_dark_gray</item>
+    </style>
     <style name="SmallRatingStars">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -209,12 +215,14 @@
         <item name="android:layout_gravity">top|center_horizontal</item>
         <item name="android:paddingTop">@dimen/verticalspacing_8dp</item>
         <item name="android:paddingLeft">@dimen/sku_padding_10</item>
+        <item name="android:paddingRight">@dimen/sku_padding_10</item>
         <item name="android:src">@drawable/bullet</item>
     </style>
     <style name="SkuBulletTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">@dimen/sku_padding_10</item>
+        <item name="android:paddingRight">@dimen/sku_padding_10</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
         <item name="android:textColor">@color/staples_black</item>
     </style>
