--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -102,7 +102,8 @@
             />
     </LinearLayout>
 
-    <!--cart list (using cards and no divider)-->
+    <!--cart list (using cards and no divider)
+        Added space to the end of the cart-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cart_list"
         android:layout_width="match_parent"
@@ -110,7 +111,10 @@
         android:layout_weight="1"
         android:scrollbars="vertical"
         android:background="@color/staples_off_white"
-        />
+        android:paddingBottom="@dimen/verticalspacing_24dp"
+        android:clipToPadding="false" />
+
+
 
     <!--coupon & rewards heading -->
     <android.support.v7.widget.CardView
