--- a/app/src/main/res/layout/weekly_ad_list.xml
+++ b/app/src/main/res/layout/weekly_ad_list.xml
@@ -38,9 +38,8 @@
                     android:id="@+id/weekly_ad_list_items"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:paddingBottom="@dimen/verticalspacing_8dp"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
+                    android:paddingBottom="@dimen/verticalspacing_24dp"
+                    android:clipToPadding="false"
                     />
 
             </FrameLayout>
