padding at the end of the page

--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -11,7 +11,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/orders_list"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+            android:paddingBottom="@dimen/verticalspacing_24dp"
+            android:clipToPadding="false"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
