--- a/app/src/main/res/layout/sku_accessory_item.xml
+++ b/app/src/main/res/layout/sku_accessory_item.xml
@@ -1,51 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/accessory_layout"
+    android:layout_width="@dimen/sku_accessory_layout_width"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/verticalspacing_8dp">
+    android:layout_margin="@dimen/margin_16dp">
 
     <ImageView
         android:id="@+id/accessory_image"
-        android:layout_width="@dimen/sku_accessory_image_width"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/sku_accessory_image_height"
         android:scaleType="centerInside"/>
 
     <TextView
         android:id="@+id/accessory_title"
-        android:layout_width="@dimen/sku_accessory_image_width"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/fontsize_12sp"
         android:textColor="@color/staples_black"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"/>
-        <com.staples.mobile.cfa.widget.RatingStars
-            android:id="@+id/accessory_rating"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_13sp"
-            android:layout_weight="0.9"/>
-    </LinearLayout>
+    <com.staples.mobile.cfa.widget.RatingStars
+        android:id="@+id/accessory_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/fontsize_13sp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"/>
-        <com.staples.mobile.cfa.widget.PriceSticker
-            android:id="@+id/accessory_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/SmallPriceSticker"
-            android:layout_weight="0.8"/>
-    </LinearLayout>
+    <com.staples.mobile.cfa.widget.PriceSticker
+        android:id="@+id/accessory_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        style="@style/SmallPriceSticker"/>
+
 </LinearLayout>
