--- a/app/src/main/res/layout/skuset_item.xml
+++ b/app/src/main/res/layout/skuset_item.xml
@@ -1,19 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/skuset_layout"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/fixed_grid_wide_height"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="6dp"
+    android:padding="@dimen/margin_16dp"
     android:background="@color/staples_white">
     <ImageView
         android:id="@+id/image"
         android:layout_width="@dimen/image_square_size"
         android:layout_height="@dimen/image_square_size"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="6dp"/>
-    <TextView
-        android:id="@+id/title"
-        style="@style/SmallProductTitle"
-        android:layout_toRightOf="@+id/image"/>
+        android:paddingRight="@dimen/margin_16dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/title"
+            style="@style/SmallProductTitle"
+            android:layout_marginRight="@dimen/margin_16dp"/>
+        <com.staples.mobile.cfa.widget.PriceSticker
+            android:id="@+id/pricing"
+            style="@style/SmallPriceSticker"
+            android:layout_marginTop="@dimen/elevation_high"/>
+        <com.staples.mobile.cfa.widget.RatingStars
+            android:id="@+id/rating"
+            android:paddingTop="@dimen/action_bar_half_margin"
+            style="@style/SmallRatingStars"/>
+    </LinearLayout>
 </LinearLayout>
