--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -12,6 +12,7 @@
     <color name="staples_black">#333333</color>             <!--part of style guide "Primary Text Color"-->
 
 	<color name="text_orange_light">#FFA080</color>
+    <color name="masked_red">#e57f7f</color>
 
     <color name="overlay">#6f000022</color>
 </resources>
