--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -59,6 +59,7 @@
     <dimen name="sku_add_cart_editor_width">80dp</dimen>
     <dimen name="sku_accessory_image_width">120dp</dimen>
     <dimen name="sku_accessory_image_height">120dp</dimen>
+    <dimen name="sku_accessory_layout_width">130dp</dimen>
 
     <dimen name="left_margin">6dp</dimen>
     <dimen name="right_margin">6dp</dimen>
