--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -20,25 +20,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/margin_16dp"
-        android:paddingRight="@dimen/margin_16dp"
-        android:paddingTop="@dimen/verticalspacing_8dp"
-        android:paddingBottom="@dimen/verticalspacing_8dp"
+        android:padding="@dimen/cartmath_half_margin"
         android:background="@color/staples_middle_gray">
-
-    <!--&lt;!&ndash; delivery range &ndash;&gt;-->
-        <!--<TextView-->
-            <!--style="@style/CheckoutFooter"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:text="@string/delivery_range"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/checkout_delivery_range"-->
-            <!--style="@style/CheckoutFooter"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--/>-->
 
         <!-- coupons & rewards -->
         <!--<TextView-->
@@ -48,6 +31,7 @@
             <!--android:layout_alignParentLeft="true"-->
             <!--android:padding="0dp"-->
             <!--android:text="@string/coupons_rewards"-->
+            <!--android:textSize="@dimen/fontsize_24sp"-->
             <!--android:textColor="@color/staples_black" />-->
         <!--<TextView-->
             <!--android:id="@+id/checkout_coupons_rewards"-->
@@ -55,28 +39,33 @@
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_alignParentTop="true"-->
             <!--android:layout_alignParentRight="true"-->
+            <!--android:textSize="@dimen/fontsize_24sp"-->
             <!--android:padding="0dp"-->
             <!--android:textColor="@color/staples_black" />-->
 
         <!-- item subtotal -->
         <TextView
-            style="@style/CheckoutFooter"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:padding="0dp"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
             android:text="@string/item_subtotal"
             android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
             />
 
         <TextView
             android:id="@+id/checkout_item_subtotal"
-            style="@style/CheckoutFooter"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:padding="0dp"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
             android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
             />
 
 		<!-- total handling cost/overweight shipping -->
@@ -86,11 +75,12 @@
 			android:layout_below="@id/checkout_item_subtotal"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:padding="0dp"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
 			android:text="@string/oversized_shipping_fee"
 			android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
             android:visibility="gone"
-            style="@style/CheckoutFooter"
 		/>
 		<TextView
 			android:id="@+id/oversized_shipping"
@@ -98,10 +88,11 @@
 			android:layout_alignParentRight="true"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:padding="0dp"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
 			android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
             android:visibility="gone"
-			style="@style/CheckoutFooter"
 		/>
 
 		<!-- shipping charge -->
@@ -110,21 +101,25 @@
 			android:layout_alignParentLeft="true"
 			android:layout_below="@id/oversized_shipping_label"
 			android:layout_width="wrap_content"
-			android:padding="0dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
 			android:text="@string/shipping"
 			android:textColor="@color/staples_black"
-			android:visibility="gone"
-			style="@style/CheckoutFooter"
+            android:textSize="@dimen/fontsize_24sp"
+            android:visibility="gone"
 			/>
 		<TextView
 			android:id="@+id/checkout_shipping"
 			android:layout_alignParentRight="true"
 			android:layout_alignBaseline="@id/checkout_shipping_label"
 			android:layout_width="wrap_content"
-			android:padding="0dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
 			android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
 			android:visibility="gone"
-			style="@style/CheckoutFooter"
 			/>
 
         <!--tax-->
@@ -133,11 +128,13 @@
             android:layout_alignParentLeft="true"
 			android:layout_below="@id/checkout_shipping_label"
             android:layout_width="wrap_content"
-            android:padding="0dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
             android:text="@string/tax"
 			android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
             android:visibility="gone"
-            style="@style/CheckoutFooter"
 			/>
 
         <TextView
@@ -145,38 +142,41 @@
             android:layout_alignParentRight="true"
 			android:layout_below="@id/checkout_shipping_label"
             android:layout_width="wrap_content"
-            android:padding="0dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/cartmath_half_margin"
+            android:paddingRight="@dimen/cartmath_half_margin"
 			android:textColor="@color/staples_black"
+            android:textSize="@dimen/fontsize_24sp"
             android:visibility="gone"
-            style="@style/CheckoutFooter"
 			/>
 
         <!-- submission button -->
         <android.support.v7.widget.CardView
             android:id="@+id/co_submission_layout"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/checkout_tax"
             android:layout_marginTop="@dimen/verticalspacing_8dp"
             android:visibility="gone"
-            card_view:cardCornerRadius="1dp"
+            card_view:contentPadding="@dimen/cartmath_half_margin"
+            card_view:cardCornerRadius="8dp"
             card_view:cardElevation="0dp"
             card_view:cardBackgroundColor="@color/staples_red" >
 
             <TextView
-                style="@style/CheckoutFooter"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
                 android:text="@string/submit_order"
-                android:textSize="@dimen/fontsize_14sp"
+                android:textSize="@dimen/fontsize_34sp"
                 android:textColor="@color/staples_white"
                 />
             <TextView
                 android:id="@+id/checkout_order_total"
-                style="@style/CheckoutFooter"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
-                android:textSize="@dimen/fontsize_14sp"
+                android:textSize="@dimen/fontsize_34sp"
                 android:textColor="@color/staples_white"
                 />
 
@@ -192,8 +192,8 @@
             <!--android:visibility="gone"-->
             <!--android:background="@color/background_red_submission">-->
             <!--<TextView-->
-                <!--style="@style/CheckoutFooter"-->
                 <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
                 <!--android:layout_alignParentLeft="true"-->
                 <!--android:layout_centerVertical="true"-->
                 <!--android:text="@string/submit_order"-->
@@ -202,8 +202,8 @@
                 <!--/>-->
             <!--<TextView-->
                 <!--android:id="@+id/checkout_order_total"-->
-                <!--style="@style/CheckoutFooter"-->
                 <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
                 <!--android:layout_alignParentRight="true"-->
                 <!--android:layout_centerVertical="true"-->
                 <!--android:textSize="@dimen/fontsize_14sp"-->
