Sku details fix

--- a/app/src/main/res/layout/sku_detail_list.xml
+++ b/app/src/main/res/layout/sku_detail_list.xml
@@ -9,4 +9,16 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <!-- whirlie placeholder -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="@dimen/fontsize_20sp"
+        android:text="@string/details_no_reviews"/>
 </com.staples.mobile.cfa.widget.DataWrapper>
